tune select implemented, alarm rings with tune specified as well the tune select playback ensures only one tune select plays at a time, but tuneselect playback WILL, at this point, overlap with alarm playback added files of soundManager mp3 link playback demo to the project

--- a/css/custom.css
+++ b/css/custom.css
@@ -3,3 +3,7 @@ body {
     margin: 0 auto;
     padding: 40px;
 }
+
+.selectedItem {
+    color: red;
+}
